--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
-html, body {
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+body {
+  margin: 0;
+  padding: 0;
   background: #eee;
+  font-family: 'Montserrat', sans-serif;
 }
